# insanely-fast-whisper

./: =5.6.0  Dockerfile  GreenParty.json  GreenParty.srt  GreenParty.tsv  GreenParty.txt  GreenParty.vtt  Intro.m4a  UseReadme.md  docker-compose.yml  env_clean.yml  env_full.yml  ipexReadme.md  ipexapi.md  linear_test.py  openai_whisper_test.py  output.json  pyproject.toml  recognize.py  server.py  test_xpu_whisper.py  transformers_whisper_test.py  utils.py  whisper-ipex.py
docker run -itd /: .sh
examples/: WhisperDoc.md  WhisperReference.md  whisperreadme.md
intel-requirements/: ipex-xpu-requirements.txt  torch-xpu-requirements.txt  venv-requirements.txt
output/: diarization.json  output.json  transcript.json
readme_ref/: ipexoptref.md
src/insanely_fast_whisper/: cli.py  ipex_api.md  notes.txt
src/insanely_fast_whisper/utils/: diarization_pipeline.py  diarize.bk.py  diarize.py  hdemucs.py  hdemucs_direct.py  result.py  silero.py  uvr.py
transformers_Patched/models/whisper/: generation_whisper.py
