[tool.pdm]
sources = [
    { name = "pytorch-xpu", url = "https://download.pytorch.org/whl/xpu", verify_ssl = true },
    { name = "intel-ipex", url = "https://pytorch-extension.intel.com/release-whl/stable/xpu/us/", verify_ssl = true }
]

[project]
name = "insanely-fast-whisper"
version = "0.0.15"
description = "An insanely fast whisper CLI"
authors = [
    { name = "VB", email = "reachvaibhavs10@gmail.com" },
    { name = "Patrick Arminio", email = "patrick.arminio@gmail.com" },
]
dependencies = [
    "transformers>=4.45.1",  # Relaxed to allow newer compatible versions
    "accelerate>=1.0.1",  # Relaxed to allow newer compatible versions
    "pyannote-audio>=3.3.2",  # Relaxed to allow newer compatible versions
    "setuptools>=70.0.0",
    "rich>=13.7.0",
    "numpy>=1.23.5",  # Minimum version to accommodate ultimatevocalremover and torch compatibility
    "idna>=3.7",
    "ffmpeg",
    # Install 'git+https://github.com/jhj0517/ultimatevocalremover_api.git' manually with 'pip install git+https://github.com/jhj0517/ultimatevocalremover_api.git --no-deps' for API-focused vocal removal
    # Optional: Install 'git+https://github.com/jhj0517/pyrubberband.git' manually with 'pip install git+https://github.com/jhj0517/pyrubberband.git --no-deps' if required for vocal removal compatibility
    "torch==2.7.0",  # Restored to original version
    "torchvision==0.22.0",  # Restored to original version
    "torchaudio==2.7.0",  # Restored to original version
    "intel-extension-for-pytorch==2.7.10+xpu",  # Restored to original version
    "oneccl-bind-pt==2.7.0+xpu",  # Restored to original version
    "requests>=2.32.0",
    "tqdm>=4.66.3",
    "urllib3>=1.26.12",  # Minimum version to accommodate ultimatevocalremover
    "psutil>=5.9.4",  # Minimum version to accommodate ultimatevocalremover
    "mkl==2025.0.1",
    "mkl-include==2025.0.1",
    "intel-openmp==2025.0.4",
    "librosa>=0.9.2",  # Minimum version to resolve conflict with ultimatevocalremover
    "scipy>=1.9.3",  # Minimum version to accommodate ultimatevocalremover and torch compatibility
    "scikit-learn>=1.3.2",  # Relaxed to allow newer compatible versions
    "soundfile>=0.11.0",  # Minimum version to accommodate ultimatevocalremover
    "pydub>=0.25.1",  # Relaxed to allow newer compatible versions for ultimatevocalremover audio processing
    "natsort>=8.2.0",  # Relaxed to allow newer compatible versions for ultimatevocalremover file sorting
    # Optional: Install 'onnxruntime-openvino' manually with 'pip install onnxruntime-openvino' if needed for Intel hardware support with ultimatevocalremover
    "fastapi>=0.68.0",
    "uvicorn>=0.15.0",
    "python-dotenv>=0.19.0",
]
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }


[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project.scripts]
insanely-fast-whisper = "insanely_fast_whisper.cli:main"

[project.urls]
# Name based
Homepage = "https://github.com/Vaibhavs10/insanely-fast-whisper"
Twitter = "https://twitter.com/reach_vb"
